# assignment

task/: pyproject.toml  requirements.txt
task/task/: app.py
task/tests/: test_user.py
