[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Sarim-Sikander <sarimsikander24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
pytest = "^7.1.3"
pymongo = {extras = ["srv"], version = "^4.2.0"}
bcrypt = "^4.0.0"
Flask-JWT-Extended = "^4.4.4"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
